# Progetto_Malnati

./: CMakeLists.txt  DB_Client.cpp  DB_Client.h  Gui.cpp  Gui.h  Network.h  Project.cpp  Project.h  README.md  Symbol.cpp  main.cpp
Client/: CMakeLists.txt  ClickableLabel.h  DB_Client.cpp  DB_Client.h  Gui.cpp  Gui.h  Mail.cpp  Mail.h  Network.cpp  Network.h  NewProjectPopUp.h  PopUp.h  Profile.cpp  Profile.h  Project.cpp  Project.h  ProjectsPopup.h  SendEmailPopup.h  Symbol.cpp  Symbol.h  UseInvite.h  WrongCredentialsPopUp.h  WrongProjectPopUp.h  main.cpp  readme.md
Client/certificates/: certificate.pem  key.pem  project.key  readme.md  server.csr
DB_server/: CMakeLists.txt  Client.cpp  Client.h  DB_functions.cpp  DB_functions.h  DB_server.cpp  DB_server.h  Project.cpp  Project.h  Service.cpp  Service.h  Symbol.cpp  Symbol.h  TaskGeneric.cpp  TaskGeneric.h  main.cpp
DB_server/certificates/: myCA.key  myCA.pem  project.pem  readme.md
certificates/: server.key
